--- a/learnin_logs/templates/learnin_logs/base.html
+++ b/learnin_logs/templates/learnin_logs/base.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 border">
 
       <a class="navbar-brand" href="{% url 'learnin_logs:index' %}">Learning logs</a>
 
