--- a/learnin_logs/templates/learnin_logs/topic.html
+++ b/learnin_logs/templates/learnin_logs/topic.html
@@ -1,8 +1,11 @@
 {% extends 'learnin_logs/base.html'%}
 {% block page_header %}
-    <h3>{{ topic }}</h3>
+    <h3>
+        {{ topic }} <small><a href="{% url 'learnin_logs:edit_topic' topic.id %}">Edit topic</a> </small>
+    </h3>
 {% endblock page_header %}
 {% block content %}
+
   <p>
       <a href="{% url 'learnin_logs:new_entry' topic.id %}">Add a new entry</a>
   </p>
