--- a/learnin_logs/templates/learnin_logs/base.html
+++ b/learnin_logs/templates/learnin_logs/base.html
@@ -23,11 +23,13 @@
           aria-expanded="false" aria-label="Toggle Navigation">
         <span class="navbar-toggle-icon"></span></button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
+      {% if user.is_authenticated %}
       <ul class="navbar-nav mr-auto">
           <li class="nav-item">
               <a class="nav-link" href="{% url 'learnin_logs:topics'%}">
                   Topics</a></li>
       </ul>
+      {% endif %}
       <ul class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
             <li class="nav-it">
