--- a/learnin_logs/templates/learnin_logs/base.html
+++ b/learnin_logs/templates/learnin_logs/base.html
@@ -19,7 +19,7 @@
       <a class="navbar-brand" href="{% url 'learnin_logs:index' %}">Learning logs</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse"
-          data-target="#navbarCollapse" aris-controls="navbarCollapse"
+          data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle Navigation">
         <span class="navbar-toggle-icon"></span></button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
