navbar button change

--- a/learnin_logs/templates/learnin_logs/base.html
+++ b/learnin_logs/templates/learnin_logs/base.html
@@ -18,11 +18,10 @@
 
       <a class="navbar-brand" href="{% url 'learnin_logs:index' %}">Learning logs</a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse"
-          data-target="#navbarCollapse" aria-controls="navbarCollapse"
-          aria-expanded="false" aria-label="Toggle Navigation">
-        <span class="navbar-toggle-icon"></span></button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button><span class="navbar-toggle-icon"></span></button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
       {% if user.is_authenticated %}
       <ul class="navbar-nav mr-auto">
           <li class="nav-item">
