--- a/learnin_logs/templates/learnin_logs/base.html
+++ b/learnin_logs/templates/learnin_logs/base.html
@@ -18,7 +18,7 @@
 
       <a class="navbar-brand" href="{% url 'learnin_logs:index' %}">Learning logs</a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button><span class="navbar-toggle-icon"></span></button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
